projetos/local/nexus-agenticops-webapp/httproute-webapp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webapp-route
  namespace: nexus-agenticops
spec:
  parentRefs:
    - name: nexus-gateway
      namespace: nginx-gateway
      sectionName: tech-https
  hostnames:
    - "hark.tech.nexusplatform.com.br"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 30s
        backendRequest: 30s
      backendRefs:
        - name: nexus-agenticops-webapp-service
          port: 80
